view international licenses in List international licenses form done

--- a/DVLD.BusinessLogic/DVLD.BusinessLogic.csproj
+++ b/DVLD.BusinessLogic/DVLD.BusinessLogic.csproj
@@ -46,6 +46,7 @@
     <Compile Include="ClsApplicationType.cs" />
     <Compile Include="ClsCountry.cs" />
     <Compile Include="ClsDriver.cs" />
+    <Compile Include="ClsInternationalLicenseApplication.cs" />
     <Compile Include="ClsLicense.cs" />
     <Compile Include="ClsLocalDrivingLicenseApplication.cs" />
     <Compile Include="ClsPerson.cs" />
