In FrmListInternationalLicense form , show person details , show person license history done

--- a/DVLD.Presentation/DVLD.Presentation.csproj
+++ b/DVLD.Presentation/DVLD.Presentation.csproj
@@ -518,6 +518,7 @@
     <None Include="Resources\License View 322.png" />
     <None Include="Resources\Applications1.png" />
     <None Include="Resources\New Application 641.png" />
+    <None Include="Resources\User 32 -21.png" />
     <Content Include="screenshoots\manage_users.PNG" />
     <Content Include="screenshoots\user_information.PNG" />
     <None Include="Resources\Male.png" />
