- driver international license details form done

--- a/ClsDataType/ClsDataType.csproj
+++ b/ClsDataType/ClsDataType.csproj
@@ -46,6 +46,7 @@
     <Compile Include="ClsApplication.cs" />
     <Compile Include="ClsDataType.cs" />
     <Compile Include="ClsDriver.cs" />
+    <Compile Include="ClsInternationaLicenseInfo.cs" />
     <Compile Include="ClsLicense.cs" />
     <Compile Include="ClsLocalDrivingLicenseApplications.cs" />
     <Compile Include="ClsTakenTest.cs" />
