icons added to menus

--- a/DVLD.Presentation/DVLD.Presentation.csproj
+++ b/DVLD.Presentation/DVLD.Presentation.csproj
@@ -537,6 +537,12 @@
     <None Include="Resources\Applications1.png" />
     <None Include="Resources\New Application 641.png" />
     <None Include="Resources\User 32 -21.png" />
+    <None Include="Resources\Release Detained License 321.png" />
+    <None Include="Resources\Detain 32.png" />
+    <None Include="Resources\PersonDetails 32.png" />
+    <None Include="Resources\Edit User 32.png" />
+    <None Include="Resources\AddPerson 32.png" />
+    <None Include="Resources\Delete User 32.png" />
     <Content Include="screenshoots\manage_users.PNG" />
     <Content Include="screenshoots\user_information.PNG" />
     <None Include="Resources\Male.png" />
