--- a/DVLD.Presentation/DVLD.Presentation.csproj
+++ b/DVLD.Presentation/DVLD.Presentation.csproj
@@ -88,6 +88,12 @@
     <Compile Include="Applications\Renew Local Driving License Application\FrmRenewLocalDrivingLicenseApplication.Designer.cs">
       <DependentUpon>FrmRenewLocalDrivingLicenseApplication.cs</DependentUpon>
     </Compile>
+    <Compile Include="Applications\Replacment for damged or lost\FrmReplacmentForDamagedOrLost.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Applications\Replacment for damged or lost\FrmReplacmentForDamagedOrLost.Designer.cs">
+      <DependentUpon>FrmReplacmentForDamagedOrLost.cs</DependentUpon>
+    </Compile>
     <Compile Include="ClsGlobal.cs" />
     <Compile Include="ClsUtil.cs" />
     <Compile Include="ClsValidation.cs" />
@@ -281,6 +287,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Applications\Renew Local Driving License Application\FrmRenewLocalDrivingLicenseApplication.resx">
       <DependentUpon>FrmRenewLocalDrivingLicenseApplication.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Applications\Replacment for damged or lost\FrmReplacmentForDamagedOrLost.resx">
+      <DependentUpon>FrmReplacmentForDamagedOrLost.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Controls\CtrlApplicationNewLicenseInfo.resx">
       <DependentUpon>CtrlApplicationNewLicenseInfo.cs</DependentUpon>
