- Release detained license application done

--- a/DVLD.Presentation/DVLD.Presentation.csproj
+++ b/DVLD.Presentation/DVLD.Presentation.csproj
@@ -82,6 +82,12 @@
     <Compile Include="Applications\LocalDrivingLicenseApplication\FrmManageLocalDrivingLicenseApplication.Designer.cs">
       <DependentUpon>FrmManageLocalDrivingLicenseApplication.cs</DependentUpon>
     </Compile>
+    <Compile Include="Applications\Release Detained License\FrmReleaseDetainedLicenseApplication.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Applications\Release Detained License\FrmReleaseDetainedLicenseApplication.Designer.cs">
+      <DependentUpon>FrmReleaseDetainedLicenseApplication.cs</DependentUpon>
+    </Compile>
     <Compile Include="Applications\Renew Local Driving License Application\FrmRenewLocalDrivingLicenseApplication.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -291,6 +297,9 @@
     <EmbeddedResource Include="Applications\LocalDrivingLicenseApplication\FrmManageLocalDrivingLicenseApplication.resx">
       <DependentUpon>FrmManageLocalDrivingLicenseApplication.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="Applications\Release Detained License\FrmReleaseDetainedLicenseApplication.resx">
+      <DependentUpon>FrmReleaseDetainedLicenseApplication.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Applications\Renew Local Driving License Application\FrmRenewLocalDrivingLicenseApplication.resx">
       <DependentUpon>FrmRenewLocalDrivingLicenseApplication.cs</DependentUpon>
     </EmbeddedResource>
@@ -489,9 +498,7 @@
   <ItemGroup>
     <None Include="Resources\DVLD_logo.PNG" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Applications\Release Detained License\" />
-  </ItemGroup>
+  <ItemGroup />
   <ItemGroup>
     <None Include="Resources\License View 32.png" />
   </ItemGroup>
@@ -581,6 +588,7 @@
     <None Include="Resources\Edit User 32.png" />
     <None Include="Resources\AddPerson 32.png" />
     <None Include="Resources\Delete User 32.png" />
+    <None Include="Resources\Release Detained License 512.png" />
     <Content Include="screenshoots\manage_users.PNG" />
     <Content Include="screenshoots\user_information.PNG" />
     <None Include="Resources\Male.png" />
