- StDetainedLicense Struct defined in ClsDataType Layer - ClsDetainedLicenses class in data access layer defined with methods  GetAllDetainedLicenses , GetDetainedLicenseByDetainID, GetDetainedLicenseByLicenseID, MapReaderToDetainLicense - ClsDetainedLicenses class defined in BusinessLogic to use data access layer methods

--- a/ClsDataType/ClsDataType.csproj
+++ b/ClsDataType/ClsDataType.csproj
@@ -45,6 +45,7 @@
   <ItemGroup>
     <Compile Include="ClsApplication.cs" />
     <Compile Include="ClsDataType.cs" />
+    <Compile Include="ClsDetainedLicense.cs" />
     <Compile Include="ClsDriver.cs" />
     <Compile Include="ClsInternationaLicenseInfo.cs" />
     <Compile Include="ClsLicense.cs" />
