--- a/DVLD.BusinessLogic/DVLD.BusinessLogic.csproj
+++ b/DVLD.BusinessLogic/DVLD.BusinessLogic.csproj
@@ -45,6 +45,7 @@
     <Compile Include="ClsApplications.cs" />
     <Compile Include="ClsApplicationType.cs" />
     <Compile Include="ClsCountry.cs" />
+    <Compile Include="ClsDetainedLicenses.cs" />
     <Compile Include="ClsDriver.cs" />
     <Compile Include="ClsInternationalLicenseApplication.cs" />
     <Compile Include="ClsLicense.cs" />
