--- a/DVLD.DataAccess/DVLD.DataAccess.csproj
+++ b/DVLD.DataAccess/DVLD.DataAccess.csproj
@@ -45,6 +45,7 @@
     <Compile Include="ClsApplications.cs" />
     <Compile Include="ClsApplicationType.cs" />
     <Compile Include="ClsCountry.cs" />
+    <Compile Include="ClsDetainedLicenses.cs" />
     <Compile Include="ClsDriver.cs" />
     <Compile Include="ClsLicense.cs" />
     <Compile Include="ClsLocalDrivingLicenseApplications.cs" />
