--- a/DVLD.Presentation/App.config
+++ b/DVLD.Presentation/App.config
@@ -1,6 +1,12 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
-    <startup> 
-        <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
-    </startup>
+	<startup>
+		<supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
+	</startup>
+
+	<connectionStrings>
+		<add name="DVLDConnectionString"
+             connectionString="Server=.;Database=dvld;Integrated Security=True;TrustServerCertificate=True"
+             providerName="System.Data.SqlClient" />
+	</connectionStrings>
 </configuration>
